# discord_bot_rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20230103222502_20210906145552_initial_migration.sql.sql
src/: main.rs
src/commands/: about.rs  cep.rs  crypto.rs  help.rs  mod.rs  ping.rs  stock.rs  todo.rs
