[package]
name = "bot_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
alphavantage = "0.7.0"
dotenv = "0.15.0"
reqwest = "0.11"
alpha_vantage = "0.9.0"