[package]
name = "bot_discord"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
alphavantage = "0.7.0"
alpha_vantage = "0.9.0"
dotenv = "0.15.0"
reqwest = "0.11"
sqlx = {version="0.6.2", features = ["runtime-async-std-native-tls", "json", "sqlite"]}
regex = "1.7"
serde = "1.0"